<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.pssq.akzeptanztest</groupId>
	<artifactId>pssq_akzeptanztest_05</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<jbehave.core.version>5.0</jbehave.core.version>
		<jbehave.site.version>3.5</jbehave.site.version>
		<embeddables>**/*Stories.java</embeddables>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>13</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>13</version>
		</dependency>
		<dependency>
			<groupId>org.jbehave</groupId>
			<artifactId>jbehave-core</artifactId>
			<version>${jbehave.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jbehave</groupId>
			<artifactId>jbehave-core</artifactId>
			<version>${jbehave.core.version}</version>
			<classifier>resources</classifier>
			<type>zip</type>
		</dependency>
		<dependency>
			<groupId>org.jbehave.site</groupId>
			<artifactId>jbehave-site-resources</artifactId>
			<version>${jbehave.site.version}</version>
			<type>zip</type>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.6</version>
				<executions>
					<execution>
						<!-- Default configuration for running -->
						<!-- Usage: mvn clean javafx:run -->
						<id>default-cli</id>
						<configuration>
							<mainClass>de.pssq.akzeptanztest.pssq_akzeptanztest_05.Main</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jbehave</groupId>
				<artifactId>jbehave-maven-plugin</artifactId>
				<version>${jbehave.core.version}</version>
				<executions>
					<execution>
						<id>unpack-view-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>unpack-view-resources</goal>
						</goals>
					</execution>
					<execution>
						<id>embeddable-stories</id>
						<phase>integration-test</phase>
						<configuration>
							<includes>
								<include>${embeddables}</include>
							</includes>
							<excludes />
							<ignoreFailureInStories>true</ignoreFailureInStories>
							<ignoreFailureInView>false</ignoreFailureInView>
							<threads>1</threads>
							<metaFilters>
								<metaFilter></metaFilter>
							</metaFilters>
						</configuration>
						<goals>
							<goal>run-stories-as-embeddables</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
					 	--add-opens de.pssq.akzeptanztest.pssq_akzeptanztest_05/de.pssq.akzeptanztest.pssq_akzeptanztest_05.gui=ALL-UNNAMED
					 </argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>